--- a/server/html/welcome.html
+++ b/server/html/welcome.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id='container'>
-  <h1>Welcome Page</h1>
+  <h1 id='header'>Welcome Page</h1>
   <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
 </div>
 </body>
