Validate content using body-element as source

--- a/server/html/error.html
+++ b/server/html/error.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="container">
-    <h1 id='header'>Error Page</h1>
+    <h1>Error Page</h1>
     <p>Login failed. Invalid user name and/or password.</p>
   </div>
 </body>
